--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="ico/favicon.ico">
+    <link rel="icon" href="ico/favicon.ico" sizes="any">
+    <link rel="icon" href="ico/icon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="ico/apple-touch-icon.png">
+    <link rel="manifest" href="/manifest.webmanifest">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
